Updated application name and icon

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cube-vue",
   "version": "1.0.0",
-  "description": "Cube frontend",
+  "description": "CubeGet Frontend",
   "author": "Jake Capangpangan <camicrisystems@gmail.com>",
   "private": true,
   "scripts": {
